fixes pt.1